--- a/saifcv.html
+++ b/saifcv.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-      <h1 style="background-color: powderblue" > Saif ur Rehman <hr> </h1>
+      <h1 style="background-color: powderblue" > Saif ur Rehmann <hr> </h1>
       <h1 style="background-color: powderblue">Personal Information</h1>
       <p style="font-size:30px;">Name: Saif ur Rehman <br>
         Address: Lahore, Pakistan<br>
