--- a/saifcv.html
+++ b/saifcv.html
@@ -6,11 +6,11 @@
 </head>
 <body ali>
     
-      <h1 style="background-color: powderblue" > Saif ur Rehmann <hr> </h1>
+      <h1 style="background-color: powderblue" > Saif ur Rehman <hr> </h1>
       <h1 style="background-color: powderblue">Personal Information</h1>
       <p style="font-size:30px;">Name: Saif ur Rehman <br>
         Address: Lahore, Pakistan<br>
-        Email: <a href="mailto:kusman9000@gmail.com" target="_blank">kusman9000@gmail.com</a>
+        Email: <a href="mailto:saifaslam155@gmail.com" target="_blank">saifaslam155@gmail.com</a> <br>
         Phone Number: 0349-6582448 <br> <hr> </p>
       <h1 style="background-color: powderblue">Objective</h1>
       <p style="font-size:30px;"> To become an web developer expert. <br> <hr> </p>
